--- a/package.json
+++ b/package.json
@@ -6,18 +6,37 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint ."
   },
   "dependencies": {
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "sentry-expo": "~7.1.0",
+    "expo-application": "~5.3.0",
+    "expo-constants": "~14.4.2",
+    "expo-device": "~5.4.0",
+    "@sentry/react-native": "5.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
+    "eslint": "^8.54.0",
+    "eslint-config-universe": "^12.0.0",
+    "prettier": "^3.1.0",
     "typescript": "^5.1.3"
+  },
+  "prettier": {
+    "trailingComma": "none",
+    "tabWidth": 2,
+    "printWidth": 120,
+    "semi": false,
+    "singleQuote": true,
+    "plugins": [
+      "prettier-plugin-tailwindcss"
+    ]
   },
   "private": true
 }
