--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "avocadoapp",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,33 +10,45 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@sentry/react-native": "5.10.0",
+    "@supabase/supabase-js": "^2.39.0",
+    "@tanstack/react-query": "^5.8.9",
     "expo": "~49.0.15",
-    "expo-status-bar": "~1.6.0",
-    "react": "18.2.0",
-    "react-native": "0.72.6",
-    "sentry-expo": "~7.1.0",
     "expo-application": "~5.3.0",
     "expo-constants": "~14.4.2",
     "expo-device": "~5.4.0",
-    "@sentry/react-native": "5.10.0"
+    "expo-linking": "~5.0.2",
+    "expo-router": "^2.0.0",
+    "expo-secure-store": "~12.3.1",
+    "expo-status-bar": "~1.6.0",
+    "react": "18.2.0",
+    "react-native": "0.72.6",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-url-polyfill": "^2.0.0",
+    "sentry-expo": "~7.1.0",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@tanstack/eslint-plugin-query": "^5.8.4",
     "@types/react": "~18.2.14",
     "eslint": "^8.54.0",
     "eslint-config-universe": "^12.0.0",
     "prettier": "^3.1.0",
     "typescript": "^5.1.3"
   },
+  "resolutions": {
+    "promise": "^8.3.0"
+  },
   "prettier": {
     "trailingComma": "none",
     "tabWidth": 2,
     "printWidth": 120,
     "semi": false,
-    "singleQuote": true,
-    "plugins": [
-      "prettier-plugin-tailwindcss"
-    ]
+    "singleQuote": true
   },
   "private": true
 }
