--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "storybook-generate": "sb-rn-get-stories",
+    "storybook-watch": "sb-rn-watcher"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.18.2",
+    "@hookform/resolvers": "^3.3.2",
+    "@react-native-async-storage/async-storage": "^1.20.0",
+    "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-community/slider": "4.4.2",
     "@sentry/react-native": "5.10.0",
     "@supabase/supabase-js": "^2.39.0",
     "@tanstack/react-query": "^5.8.9",
@@ -18,30 +23,48 @@
     "expo-application": "~5.3.0",
     "expo-constants": "~14.4.2",
     "expo-device": "~5.4.0",
+    "expo-image": "~1.3.5",
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.0",
     "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
-    "react-native-safe-area-context": "4.6.3",
+    "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "~3.22.0",
     "react-native-url-polyfill": "^2.0.0",
     "sentry-expo": "~7.1.0",
+    "twrnc": "^3.6.4",
+    "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@storybook/addon-actions": "^6.5.16",
+    "@storybook/addon-controls": "^6.5.16",
+    "@storybook/addon-ondevice-actions": "^6.5.7",
+    "@storybook/addon-ondevice-controls": "^6.5.7",
+    "@storybook/react-native": "^6.5.7",
     "@tanstack/eslint-plugin-query": "^5.8.4",
     "@types/react": "~18.2.14",
+    "babel-loader": "^8.3.0",
+    "babel-plugin-react-docgen-typescript": "^1.5.1",
     "eslint": "^8.54.0",
     "eslint-config-universe": "^12.0.0",
     "prettier": "^3.1.0",
+    "react-dom": "18.2.0",
     "typescript": "^5.1.3"
   },
   "resolutions": {
-    "promise": "^8.3.0"
+    "promise": "^8.3.0",
+    "react-docgen-typescript": "2.2.2",
+    "@storybook/react-docgen-typescript-plugin": "1.0.6--canary.9.cd77847.0"
+  },
+  "overrides": {
+    "react-docgen-typescript": "2.2.2",
+    "@storybook/react-docgen-typescript-plugin": "1.0.6--canary.9.cd77847.0"
   },
   "prettier": {
     "trailingComma": "none",
