--- a/package.json
+++ b/package.json
@@ -23,15 +23,18 @@
     "expo-application": "~5.3.0",
     "expo-constants": "~14.4.2",
     "expo-device": "~5.4.0",
+    "expo-font": "~11.4.0",
     "expo-image": "~1.3.5",
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.0",
     "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.6.0",
+    "lottie-react-native": "5.1.6",
     "react": "18.2.0",
     "react-hook-form": "^7.48.2",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "~3.22.0",
     "react-native-url-polyfill": "^2.0.0",
