--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "^4.7.4",
+    "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-url-polyfill": "^2.0.0",
     "sentry-expo": "~7.1.0",
