--- a/.env.local.example
+++ b/.env.local.example
@@ -1,1 +1,7 @@
- EXPO_PUBLIC_STORYBOOK_ENABLED=false
+EXPO_PUBLIC_STORYBOOK_ENABLED=false
+
+# replace with your local IP address
+EXPO_PUBLIC_SUPABASE_LOCAL_URL=http://192.168.1.23:54321
+
+EXPO_PUBLIC_SUPABASE_LOCAL_ANON_KEY=your-local-supabase-anon-key
+```
