--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
+    "react-native-root-toast": "^3.5.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-url-polyfill": "^2.0.0",
+    "react-native-webview": "13.2.2",
     "sentry-expo": "~7.1.0",
     "twrnc": "^3.6.4",
     "zod": "^3.22.4",
