--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "eslint .",
     "storybook-generate": "sb-rn-get-stories",
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
-    "@react-native-async-storage/async-storage": "^1.20.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-community/slider": "4.4.2",
     "@sentry/react-native": "5.10.0",
@@ -21,6 +21,7 @@
     "@tanstack/react-query": "^5.8.9",
     "expo": "~49.0.15",
     "expo-application": "~5.3.0",
+    "expo-auth-session": "~5.0.2",
     "expo-constants": "~14.4.2",
     "expo-device": "~5.4.0",
     "expo-font": "~11.4.0",
@@ -43,7 +44,8 @@
     "sentry-expo": "~7.1.0",
     "twrnc": "^3.6.4",
     "zod": "^3.22.4",
-    "zustand": "^4.4.7"
+    "zustand": "^4.4.7",
+    "expo-splash-screen": "~0.20.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
