--- a/package.json
+++ b/package.json
@@ -22,15 +22,20 @@
     "expo": "~49.0.15",
     "expo-application": "~5.3.0",
     "expo-auth-session": "~5.0.2",
+    "expo-blur": "~12.4.1",
     "expo-constants": "~14.4.2",
     "expo-device": "~5.4.0",
+    "expo-file-system": "~15.4.5",
     "expo-font": "~11.4.0",
     "expo-image": "~1.3.5",
     "expo-linking": "~5.0.2",
+    "expo-localization": "~14.3.0",
     "expo-router": "^2.0.0",
     "expo-secure-store": "~12.3.1",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "lottie-react-native": "5.1.6",
+    "posthog-react-native": "^2.9.0",
     "react": "18.2.0",
     "react-hook-form": "^7.48.2",
     "react-native": "0.72.6",
@@ -44,8 +49,7 @@
     "sentry-expo": "~7.1.0",
     "twrnc": "^3.6.4",
     "zod": "^3.22.4",
-    "zustand": "^4.4.7",
-    "expo-splash-screen": "~0.20.5"
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
