--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-file-system": "~15.4.5",
     "expo-font": "~11.4.0",
     "expo-image": "~1.3.5",
+    "expo-linear-gradient": "~12.3.0",
     "expo-linking": "~5.0.2",
     "expo-localization": "~14.3.0",
     "expo-router": "^2.0.0",
