--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@react-native-community/netinfo": "9.3.10",
     "@react-native-community/slider": "4.4.2",
     "@sentry/react-native": "5.10.0",
-    "@stripe/stripe-react-native": "^0.35.0",
+    "@stripe/stripe-react-native": "0.28.0",
     "@supabase/supabase-js": "^2.39.0",
     "@tanstack/react-query": "^5.8.9",
     "expo": "~49.0.15",
