Add audio player

--- a/app.json
+++ b/app.json
@@ -15,7 +15,10 @@
     "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.avocado.shares.myavocado"
+      "bundleIdentifier": "com.avocado.shares.myavocado",
+      "infoPlist": {
+        "UIBackgroundModes": ["audio"]
+      }
     },
     "android": {
       "adaptiveIcon": {
