--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@stripe/stripe-react-native": "0.28.0",
     "@supabase/supabase-js": "^2.39.0",
     "@tanstack/react-query": "^5.8.9",
+    "dayjs": "^1.11.10",
     "expo": "~49.0.15",
     "expo-application": "~5.3.0",
     "expo-auth-session": "~5.0.2",
