--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "expo-linear-gradient": "~12.3.0",
     "expo-linking": "~5.0.2",
     "expo-localization": "~14.3.0",
+    "expo-notifications": "~0.20.1",
     "expo-router": "^2.0.0",
     "expo-secure-store": "~12.3.1",
     "expo-splash-screen": "~0.20.5",
