--- a/package.json
+++ b/package.json
@@ -13,48 +13,49 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-native-community/datetimepicker": "7.2.0",
-    "@react-native-community/netinfo": "9.3.10",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-community/datetimepicker": "7.6.1",
+    "@react-native-community/netinfo": "11.1.0",
     "@react-native-community/slider": "4.4.2",
-    "@sentry/react-native": "5.10.0",
-    "@stripe/stripe-react-native": "0.28.0",
+    "@sentry/react-native": "5.17.0",
+    "@stripe/stripe-react-native": "~0.35.1",
     "@supabase/supabase-js": "^2.39.0",
     "@tanstack/react-query": "^5.8.9",
     "dayjs": "^1.11.10",
-    "expo": "~49.0.15",
-    "expo-application": "~5.3.0",
-    "expo-auth-session": "~5.0.2",
-    "expo-av": "~13.4.1",
-    "expo-blur": "~12.4.1",
-    "expo-constants": "~14.4.2",
-    "expo-device": "~5.4.0",
-    "expo-file-system": "~15.4.5",
-    "expo-font": "~11.4.0",
-    "expo-image": "~1.3.5",
-    "expo-image-picker": "~14.3.2",
-    "expo-linear-gradient": "~12.3.0",
-    "expo-linking": "~5.0.2",
-    "expo-localization": "~14.3.0",
-    "expo-notifications": "~0.20.1",
-    "expo-router": "^2.0.0",
-    "expo-secure-store": "~12.3.1",
-    "expo-splash-screen": "~0.20.5",
-    "expo-status-bar": "~1.6.0",
-    "lottie-react-native": "5.1.6",
+    "expo": "^50.0.7",
+    "expo-application": "~5.8.3",
+    "expo-auth-session": "~5.4.0",
+    "expo-av": "~13.10.5",
+    "expo-blur": "~12.9.2",
+    "expo-constants": "~15.4.5",
+    "expo-device": "~5.9.3",
+    "expo-file-system": "~16.0.6",
+    "expo-font": "~11.10.3",
+    "expo-image": "~1.10.6",
+    "expo-image-picker": "~14.7.1",
+    "expo-linear-gradient": "~12.7.2",
+    "expo-linking": "~6.2.2",
+    "expo-localization": "~14.8.3",
+    "expo-notifications": "~0.27.6",
+    "expo-router": "~3.4.7",
+    "expo-secure-store": "~12.8.1",
+    "expo-sharing": "~11.10.0",
+    "expo-splash-screen": "~0.26.4",
+    "expo-status-bar": "~1.11.1",
+    "lottie-react-native": "6.5.1",
     "posthog-react-native": "^2.9.0",
     "react": "18.2.0",
     "react-hook-form": "^7.48.2",
-    "react-native": "0.72.6",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-native-reanimated": "~3.3.0",
+    "react-native": "0.73.4",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-root-toast": "^3.5.1",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-webview": "13.2.2",
-    "sentry-expo": "~7.1.0",
+    "react-native-webview": "13.6.4",
+    "sentry-expo": "~7.2.0",
     "twrnc": "^3.6.4",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
@@ -67,7 +68,7 @@
     "@storybook/addon-ondevice-controls": "^6.5.7",
     "@storybook/react-native": "^6.5.7",
     "@tanstack/eslint-plugin-query": "^5.8.4",
-    "@types/react": "~18.2.14",
+    "@types/react": "~18.2.45",
     "babel-loader": "^8.3.0",
     "babel-plugin-react-docgen-typescript": "^1.5.1",
     "eslint": "^8.54.0",
