--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
     "@supabase/supabase-js": "^2.39.0",
     "@tanstack/react-query": "^5.8.9",
     "dayjs": "^1.11.10",
-    "expo": "^50.0.7",
+    "expo": "~50.0.8",
     "expo-application": "~5.8.3",
     "expo-auth-session": "~5.4.0",
     "expo-av": "~13.10.5",
     "expo-blur": "~12.9.2",
     "expo-constants": "~15.4.5",
     "expo-device": "~5.9.3",
-    "expo-file-system": "~16.0.6",
+    "expo-file-system": "~16.0.7",
     "expo-font": "~11.10.3",
     "expo-image": "~1.10.6",
     "expo-image-picker": "~14.7.1",
