--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@react-native-community/datetimepicker": "7.6.1",
     "@react-native-community/netinfo": "11.1.0",
     "@react-native-community/slider": "4.4.2",
-    "@sentry/react-native": "5.17.0",
+    "@sentry/react-native": "5.19.1",
     "@stripe/stripe-react-native": "~0.35.1",
     "@supabase/supabase-js": "^2.39.0",
     "@tanstack/react-query": "^5.8.9",
@@ -29,6 +29,7 @@
     "expo-av": "~13.10.5",
     "expo-blur": "~12.9.2",
     "expo-constants": "~15.4.5",
+    "expo-dev-client": "~3.3.9",
     "expo-device": "~5.9.3",
     "expo-file-system": "~16.0.7",
     "expo-font": "~11.10.3",
