Privacy updates and delete account in app

--- a/.env.local.example
+++ b/.env.local.example
@@ -5,3 +5,5 @@ EXPO_PUBLIC_SUPABASE_LOCAL_URL=http://192.168.1.23:54321
 
 EXPO_PUBLIC_SUPABASE_LOCAL_ANON_KEY=your-local-supabase-anon-key
 ```
+
+LOCAL_DEV_IP_ADDRESS=http://10.0.0.25
