--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "expo-sharing": "~11.10.0",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
+    "expo-tracking-transparency": "~3.3.0",
     "expo-updates": "~0.24.11",
     "lottie-react-native": "6.5.1",
     "posthog-react-native": "^2.9.0",
