--- a/package.json
+++ b/package.json
@@ -9,59 +9,60 @@
     "web": "expo start --web",
     "lint": "eslint .",
     "storybook-generate": "sb-rn-get-stories",
-    "storybook-watch": "sb-rn-watcher"
+    "storybook-watch": "sb-rn-watcher",
+    "upgrade": "npx expo install"
   },
   "dependencies": {
     "@config-plugins/react-native-branch": "^7.0.0",
     "@hookform/resolvers": "^3.3.2",
-    "@react-native-async-storage/async-storage": "1.21.0",
-    "@react-native-community/datetimepicker": "7.6.1",
-    "@react-native-community/netinfo": "11.1.0",
-    "@react-native-community/slider": "4.4.2",
-    "@sentry/react-native": "5.19.1",
-    "@stripe/stripe-react-native": "~0.35.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "7.7.0",
+    "@react-native-community/netinfo": "11.3.1",
+    "@react-native-community/slider": "4.5.2",
+    "@sentry/react-native": "~5.22.0",
+    "@stripe/stripe-react-native": "0.37.2",
     "@supabase/supabase-js": "^2.39.0",
     "@tanstack/react-query": "^5.8.9",
     "dayjs": "^1.11.10",
-    "expo": "~50.0.8",
-    "expo-application": "~5.8.3",
-    "expo-auth-session": "~5.4.0",
-    "expo-av": "~13.10.5",
-    "expo-blur": "~12.9.2",
-    "expo-constants": "~15.4.5",
-    "expo-dev-client": "~3.3.9",
-    "expo-device": "~5.9.3",
-    "expo-file-system": "~16.0.7",
-    "expo-font": "~11.10.3",
-    "expo-image": "~1.10.6",
-    "expo-image-picker": "~14.7.1",
-    "expo-linear-gradient": "~12.7.2",
-    "expo-linking": "~6.2.2",
-    "expo-localization": "~14.8.3",
-    "expo-notifications": "~0.27.6",
-    "expo-router": "~3.4.7",
-    "expo-secure-store": "~12.8.1",
-    "expo-sharing": "~11.10.0",
-    "expo-splash-screen": "~0.26.4",
-    "expo-status-bar": "~1.11.1",
-    "expo-updates": "~0.24.11",
-    "lottie-react-native": "6.5.1",
+    "expo": "^51.0.0",
+    "expo-application": "~5.9.1",
+    "expo-auth-session": "~5.5.2",
+    "expo-av": "~14.0.3",
+    "expo-blur": "~13.0.2",
+    "expo-constants": "~16.0.1",
+    "expo-dev-client": "~4.0.11",
+    "expo-device": "~6.0.2",
+    "expo-file-system": "~17.0.1",
+    "expo-font": "~12.0.4",
+    "expo-image": "~1.12.8",
+    "expo-image-picker": "~15.0.4",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-linking": "~6.3.1",
+    "expo-localization": "~15.0.3",
+    "expo-notifications": "~0.28.1",
+    "expo-router": "~3.5.10",
+    "expo-secure-store": "~13.0.1",
+    "expo-sharing": "~12.0.1",
+    "expo-splash-screen": "~0.27.4",
+    "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.9",
+    "lottie-react-native": "6.7.0",
     "posthog-react-native": "^2.9.0",
     "react": "18.2.0",
     "react-hook-form": "^7.48.2",
-    "react-native": "0.73.4",
+    "react-native": "0.74.1",
     "react-native-branch": "^6.0.0",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-image-colors": "^2.4.0",
     "react-native-palette": "^1.2.2",
-    "react-native-reanimated": "~3.6.2",
+    "react-native-reanimated": "3.10.0",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-root-toast": "^3.5.1",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-webview": "13.6.4",
-    "sentry-expo": "~7.2.0",
+    "react-native-webview": "13.8.6",
+    "sentry-expo": "~7.0.0",
     "twrnc": "^3.6.4",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
@@ -74,14 +75,14 @@
     "@storybook/addon-ondevice-controls": "^6.5.7",
     "@storybook/react-native": "^6.5.7",
     "@tanstack/eslint-plugin-query": "^5.8.4",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.2.79",
     "babel-loader": "^8.3.0",
     "babel-plugin-react-docgen-typescript": "^1.5.1",
     "eslint": "^8.54.0",
     "eslint-config-universe": "^12.0.0",
     "prettier": "^3.1.0",
     "react-dom": "18.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "~5.3.3"
   },
   "resolutions": {
     "promise": "^8.3.0",
