--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-url-polyfill": "^2.0.0",
+    "react-native-web": "~0.19.10",
     "react-native-webview": "13.8.6",
     "sentry-expo": "~7.0.0",
     "twrnc": "^3.6.4",
